remove unusful config