@@ -18,9 +18,6 @@
         <junit-jupiter.version>5.3.2</junit-jupiter.version>
         <maven-jacoco-plugin.version>0.8.2</maven-jacoco-plugin.version>
         <maven-surefire.version>2.22.1</maven-surefire.version>
-        <argline>-server -Xms256m -Xmx512m -XX:PermSize=64m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8
-            -Djava.net.preferIPv4Stack=true
-        </argline>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
     </properties>
     <dependencyManagement>
@@ -61,12 +58,6 @@
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
-                        <configuration>
-                            <destFile>
-                                ${project.build.directory}/coverage-reports/jacoco.exec
-                            </destFile>
-                            <propertyName>jacocoArgLine</propertyName>
-                        </configuration>
                     </execution>
                     <execution>
                         <id>report</id>
@@ -74,10 +65,6 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
-                        <configuration>
-                            <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
-                            <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
